Conexion con daemon

--- a/archivos-daemon/my-server.service
+++ b/archivos-daemon/my-server.service
@@ -4,12 +4,12 @@ After=network.target
 StartLimitIntervalSec=0
 
 [Service]
+User=andres
+Group=andres
+WorkingDirectory=/home/andres/Documents/tarea-operativos/server
+Environment=UPLOADS_DIR=/home/andres/Documents/Tarea1-Operativos/server/uploads
 Type=simple
 ExecStart=/home/andres/Documents/tarea-operativos/server/server
-
-User=andres
-
-Environment=ENV=production
 
 Restart=always
 RestartSec=1
