--- a/server/Makefile
+++ b/server/Makefile
@@ -1,5 +1,6 @@
 CC = gcc
 CFLAGS = -Wall -Wextra -pthread
+LDFLAGS = -lm
 TARGET = server
 SRCS = server.c handle_client.c socket_helpers.c pqueue.c
 OBJS = $(SRCS:.c=.o)
@@ -9,7 +10,7 @@ OBJS = $(SRCS:.c=.o)
 all: $(TARGET)
 
 $(TARGET): $(OBJS)
-	$(CC) $(CFLAGS) -o $@ $^
+	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 
 %.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
