Commit para entrega Documentacion y funciones finales para histograma de equalizacion

--- a/archivos-daemon/config.conf
+++ b/archivos-daemon/config.conf
@@ -1,4 +1,4 @@
 Puerto:1717
-DirColores:imagenes_out/
-DirHisto:imagenes_in/
-DirLog:/log
+DirColores:../imagenes_out/
+DirHisto:../imagenes_out/Histograma/
+DirLog:../log/logs.txt
